--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ fabric.properties
 .AppleDouble
 .LSOverride
 
-# Icon must end with two \r
+# Icon must end with playerTwo \r
 Icon
 
 # Thumbnails
@@ -223,4 +223,5 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 .gradle
+result/
 # End of https://www.gitignore.io/api/java,maven
