exclude results folder

--- a/.gitignore
+++ b/.gitignore
@@ -223,5 +223,5 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 .gradle
-result/
+/result/
 # End of https://www.gitignore.io/api/java,maven
